--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dan-silva-portfolio",
-  "homepage": "https://dansilvaUT.github.io/dan-silva-portfolio",
+  "homepage": "https://dansilvaUT.github.io/dan-silva-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
