--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "gh-pages": "^6.3.0",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0",
-    "react-router": "^7.1.1",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
